<resources>
    <string name="app_name">NEST</string>
    <string name="borrow">Loan</string>
    <string name="nest">NEST</string>
    <string name="eth">ETH</string>
    <string name="my_contract">我的合约</string>
    <string name="launcher_info">去中心化数字资产抵押借贷 DApp</string>
    <string name="create_wallet">创建钱包</string>
    <string name="create_wallet_warn_1">* 钱包密码用于保护您的私钥和身份验证</string>
    <string name="create_wallet_warn_2">* NEST不存储任何密码，也无法帮您找回，请妥善保管</string>
    <string name="set_password">请设置8~32位密码</string>
    <string name="reinput_psd">请重复密码</string>
    <string name="agreement_1">我已阅读并同意</string>
    <string name="agreement_2">《用户服务协议及隐私条款》</string>
    <string name="agreement_3">《风险提示和用户协议》</string>
    <string name="import_wallet">导入钱包</string>
    <string name="wallet_psd">钱包密码</string>
    <string name="input_wallet_psd">请输入钱包密码</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="backup_wallet_1_des">助记词等同于私钥，您的设备联网都有被盗风险，请您手抄助记词并存放在安全的地方</string>
    <string name="backup_wallet_2_des">当您不慎遗忘密码或者丢失私钥时，可以使用助记词来恢复钱包</string>
    <string name="immediately_backup">立即备份</string>
    <string name="dont_screenshot">请勿截图</string>
    <string name="dont_screenshot_warn">请确保四周无人及无任何摄像头\n勿用截图或拍照保存，有被盗风险</string>
    <string name="i_know">我知道了</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="please_copy_mnemonic">请抄写您的助记词</string>
    <string name="mnemonic_warn">助记词用于恢复钱包，一旦丢失，无法找回\n请按照顺序抄写助记词在纸上，并保存在安全的地方</string>
    <string name="mnemonic_next">我已正确抄写，下一步</string>
    <string name="confirm_mnemonic">确认助记词</string>
    <string name="validate_mnemonic">请验证您的助记词</string>
    <string name="mnemonic_check">为了确保您的助记词备份正确，请按照抄写顺序点击助记词</string>
    <string name="mnemonic_validate_error">验证失败，请确认您的助记词顺序是否正确</string>
    <string name="reset">重置</string>
    <string name="validate_success">验证成功</string>
    <string name="mnemonic_validate_success">请妥善保管好您的助记词，丢失将无法找回</string>
    <string name="mnemonic">助记词</string>
    <string name="input_mnemonic_hint">请输入助记词，并按空格分隔单词</string>
    <string name="start_input">开始导入</string>
    <string name="input_keystore_hint">请直接复制Keystore文件内容至输入框</string>
    <string name="input_keystore_password">请输入Keystore密码</string>
    <string name="keystore_password_incorrect">Keystore 密码错误</string>
    <string name="old_password_error">旧密码错误</string>
    <string name="my_wallet">我的钱包</string>
    <string name="wallet">钱包</string>
    <string name="market">市场</string>
    <string name="contract">合约</string>
    <string name="copy_address">复制地址</string>
    <string name="please_input_token">请输入 Token 名称或 ERC20 Token 合约地址</string>
    <string name="no_search_result">没找到想要的结果</string>
    <string name="assets_detail">资产详情</string>
    <string name="turn_out">转出</string>
    <string name="switch_to">转入</string>
    <string name="eth_rewards">分红奖励</string>
    <string name="nest_rewards">挖矿奖励</string>
    <string name="no_have_record">暂无交易记录</string>
    <string name="transfer">转账</string>
    <string name="target_address">转入地址</string>
    <string name="transfer_assets_type">转出类型</string>
    <string name="transfer_assets_amount">转出金额</string>
    <string name="current_balance">当前余额</string>
    <string name="transfer_price">矿工费</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="next">下一步</string>
    <string name="input_transfer_address">请输入 42 位钱包地址</string>
    <string name="wallet_address">钱包地址</string>
    <string name="transfer_detail">交易详情</string>
    <string name="transferred_in_address">转入地址</string>
    <string name="confirm_transfer">确认转出</string>
    <string name="transactions_details">详情</string>
    <string name="to_address">转出地址</string>
    <string name="tx_hash">交易 Hash</string>
    <string name="in_the_package">\t打包中</string>
    <string name="transaction_success">\t交易成功</string>
    <string name="transaction_fail">\t交易失败</string>
    <string name="wallet_manager">钱包管理</string>
    <string name="wallet_setting">钱包设置</string>
    <string name="update_psd">修改密码</string>
    <string name="export_keystore">导出 Keystore</string>
    <string name="other_setting">其他设置</string>
    <string name="language_switch">多语言选择</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="delete">删除</string>
    <string name="delete_wallet_warn">删除钱包后，与其对应的合约也会删除！请确保钱包与合约均已备份</string>
    <string name="input_current_psd">请输入您的旧密码</string>
    <string name="input_new_psd">请设置8～32位新密码</string>
    <string name="confirm_new_psd">请再次输入新密码</string>
    <string name="confirm_update">确认修改</string>
    <string name="complete">完成</string>
    <string name="QR_code">二维码</string>
    <string name="save_offline">离线保存</string>
    <string name="save_prompt">请将 Keystore 文件复制到安全、离线的地方保存,请不要把 Keystore 文件保存到记事本、邮箱、网盘、聊天工具等，会有很大风险</string>
    <string name="not_use_network_transmission">请不要使用网络传输</string>
    <string name="transmission_prompt">请不要通过网络工具传输 Keystore 文件，若被黑客获取将会对您造成不可挽回的损失\n建议使用离线设备，通过扫描二维码的方式</string>
    <string name="copy_keystore">复制 Keystore</string>
    <string name="safe_scan">请在安全环境下扫描</string>
    <string name="scan_prompt">请确保四周无人及摄像头，二维码禁止保存、截图、拍照\n仅限在安全环境下使用，二维码一旦被他人获取将会对您的资\n产造成不可挽回的损失</string>
    <string name="show_qr_code">显示二维码</string>
    <string name="hide_qr_code">隐藏二维码</string>
    <string name="wallet_name">钱包名称</string>
    <string name="backup_keystore">备份Keystore</string>
    <string name="publish_time">发布时间</string>
    <string name="borrow_amount">借 ETH 数量</string>
    <string name="borrowing_amount">借入数量(ETH)</string>
    <string name="borrow_tusd_amount">借入数量(TUSD)</string>
    <string name="discount_rate">抵押率</string>
    <string name="mortgage_rate">抵押率</string>
    <string name="market_mortgage_rate">抵押率</string>
    <string name="borrow_interest">利率</string>
    <string name="market_interest_rate">利率</string>
    <string name="market_cycle">周期</string>
    <string name="market_number">数量</string>
    <string name="contract_publish_success">合约发布到市场成功</string>
    <string name="contract_publish_fail">合约发布失败</string>
    <string name="contract_contract_existed">该合约已经发布,请勿重复发布</string>
    <string name="filter">筛选</string>
    <string name="mortgaged_assets">抵押资产</string>
    <string name="market_day">/ 天</string>
    <string name="mortgage_assets_type">抵押资产类型</string>
    <string name="transaction_record_statistics" formatted="false">已成交%s单，累计交易%sETH，%sTUSD</string>
    <string name="contract_management">合约管理</string>
    <string name="no_contract">暂无合约</string>
    <string name="deploy_new_contract">部署新合约</string>
    <string name="or">或</string>
    <string name="market_look">去市场看看</string>
    <string name="status_1">待转入抵押</string>
    <string name="status_2">待投资</string>
    <string name="borrow_money">借入</string>
    <string name="status_3">待还款</string>
    <string name="status_4">已逾期</string>
    <string name="overdue">已逾期</string>
    <string name="status_5">已还款</string>
    <string name="status_6">已结束</string>
    <string name="investment">投资</string>
    <string name="maturity_and_interest">到期本息</string>
    <string name="daoqibenxi">到期本息</string>
    <string name="due_payment">应还本息</string>
    <string name="due_income">到期本息</string>
    <string name="time_1">部署时间</string>
    <string name="message_center">消息中心</string>
    <string name="packaging_success">\t打包成功</string>
    <string name="invest_contract">投资合约</string>
    <string name="message_status_4">投资合约</string>
    <string name="retrieve_assets">取回资产</string>
    <string name="packaging_failure">\t打包失败</string>
    <string name="contract_type">合约类型</string>
    <string name="contract_address">合约地址</string>
    <string name="invest_assets">投资资产</string>
    <string name="contract_eth">ETH 借贷合约</string>
    <string name="effect_time">生效时间</string>
    <string name="overdue_time">逾期时间</string>
    <string name="time_4">逾期时间</string>
    <string name="output_contract">导出合约</string>
    <string name="export_contract">导出合约</string>
    <string name="export">导出</string>
    <string name="delete_contract">删除合约</string>
    <string name="input_contract_address">请输入合约地址</string>
    <string name="scan_import">扫码导入</string>
    <string name="select_image_from_album">从相册选择图片</string>
    <string name="please_open_album">为便捷导入合约，请打开相机/相册权限</string>
    <string name="please_open_message_permission">为及时获取合约信息，请打开消息推送权限</string>
    <string name="no_open_album">未打开相机/相册权限，请设置后使用</string>
    <string name="delete_contract_warn">合约删除后将不再展示，请确认已经做好合约备份</string>
    <string name="contract_expires">取回抵押资产后，合约失效</string>
    <string name="take_back_assets">取回抵押资产</string>
    <string name="input_contract_param">填写合约信息</string>
    <string name="borrowing_cycle">周期(天)</string>
    <string name="borrow_cycle">周期</string>
    <string name="cycle">周期</string>
    <string name="borrowing_interest">利率(‰/天)</string>
    <string name="previous">上一步</string>
    <string name="choose_mortgage_assets">选择抵押资产</string>
    <string name="mortgageAmount">抵押数量 %s</string>
    <string name="rate">折扣率</string>
    <string name="compromise">折合</string>
    <string name="equivalent">折合</string>
    <string name="tx_type">交易类型</string>
    <string name="new_eth_contract">借 ETH</string>
    <string name="new_tusd_contract">借 TUSD</string>
    <string name="deploy_contract">部署合约</string>
    <string name="message_status_1">部署合约</string>
    <string name="contract_detail">合约详情</string>
    <string name="pay_and_invest">支付并投资</string>
    <string name="borrow_address">借方地址</string>
    <string name="invest_address">投资地址</string>
    <string name="step_deploy_hint">点击填写参数后，可部署合约</string>
    <string name="executable">可执行</string>
    <string name="executed">已执行</string>
    <string name="not_executed">未执行</string>
    <string name="not_executable">不可执行</string>
    <string name="transfer_to_mortgage_assets">转入抵押资产</string>
    <string name="step_mortgage_hint">转入抵押资产后，合约生效</string>
    <string name="mortgage_insufficient">需转入抵押资产</string>
    <string name="step_invest_hint">投资合约将有额外的挖矿积分奖励</string>
    <string name="invest_amount">投资数量</string>
    <string name="invest_time">投资时间</string>
    <string name="handling_fee">手续费</string>
    <string name="poundage">手续费</string>
    <string name="actual_arrival">借方实际到账</string>
    <string name="status_repayment">还款</string>
    <string name="step_repayment_hint">逾期将无法取回抵押资产</string>
    <string name="time_5">还款时间</string>
    <string name="repayment_time">还款时间</string>
    <string name="step_overdue_hint">逾期后，投资人可获取抵押资产</string>
    <string name="follow">关注</string>
    <string name="time_6">结束时间</string>
    <string name="message_status_5">还款</string>
    <string name="refusals">拒绝</string>
    <string name="allow">允许</string>
    <string name="share_contract">分享</string>
    <string name="import_fail_existed">导入失败，合约管理中已存在该合约</string>
    <string name="import_fail_not_nest">导入失败，请导入NEST合约地址</string>
    <string name="import_contract_success">导入成功，可在合约管理中查看</string>
    <string name="save_the_image_successfully">保存图片成功</string>
    <string name="failed_to_save_image">保存图片失败</string>
    <string name="transfer_success">转帐成功</string>
    <string name="borrowing_description">借币说明</string>
    <string name="borrowing_rule">每种抵押资产最多可借计算方式如下：\n最多可借 = 当前余额×折扣率×资产昨日均价\n资产昨日均价为该抵押资产前一天兑ETH的平均价格\n* 提前还款也需偿还全部本息</string>
    <string name="back">返回</string>
    <string name="import_contract">导入合约</string>
    <string name="import_create_wallet">导入 / 创建钱包</string>
    <string name="nest_introduce">NEST，去中心化数字资产抵押借贷平台</string>
    <string name="export_private_key">导出私钥</string>
    <string name="backup_safe_tips_title">请在安全环境下备份</string>
    <string name="export_private_key_tips">请妥善保管私钥数据，确保四周无人及摄像头，禁止截图、拍照，仅限在安全环境下使用，私钥一旦被他人获取将会对您的资产造成不可挽回的损失</string>
    <string name="copy_private_key">复制私钥</string>
</resources>