<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/c0">

        <com.lianer.core.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c1"
            app:centerTitle="@string/backup_mnemonic"
            app:leftDrawble="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/please_copy_mnemonic"
            style="@style/b1_style"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="@string/mnemonic_warn"
            style="@style/c7t4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_mnemonic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            />

        <Button
            android:id="@+id/backup_mnemonic"
            style="@style/public_btn_style"
            android:layout_marginTop="@dimen/dp_70"
            android:text="@string/mnemonic_next" />

    </LinearLayout>

</layout>