<?xml version="1.0" encoding="utf-8"?>
<layout >
    <data>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c0"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/save_offline"
            style="@style/t2_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="8dp"
            android:text="@string/save_prompt"
            android:lineSpacingExtra="2dp"
            style="@style/c11t4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            style="@style/t2_style"
            android:text="@string/not_use_network_transmission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_marginTop="8dp"
            android:text="@string/transmission_prompt"
            style="@style/c11t4"
            android:lineSpacingExtra="2dp"/>


        <TextView
            android:id="@+id/show_keystore"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:gravity="top"
            android:padding="12dp"
            style="@style/c7t4"
            android:background="@drawable/frame_dark_corners_stroke_bg"/>

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_selector"
            android:textColor="@color/btn_text_selector"
            android:textAllCaps="false"
            android:text="@string/copy_keystore"
            android:layout_margin="@dimen/dp_16"
            android:stateListAnimator="@null"/>

    </LinearLayout>

</layout>
