<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/c0">
        <com.lianer.core.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/c1"
            app:centerTitle="@string/export_private_key"
            app:leftDrawble="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/backup_safe_tips_title"
            style="@style/t2_style"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="8dp"
            android:text="@string/export_private_key_tips"
            android:lineSpacingExtra="2dp"
            style="@style/c11t4"/>

        <TextView
            android:id="@+id/show_private_key"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:gravity="top"
            android:padding="12dp"
            style="@style/c7t4"
            android:background="@drawable/frame_dark_corners_stroke_bg"/>

        <Button
            android:id="@+id/btn_copy"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_selector"
            android:textColor="@color/btn_text_selector"
            android:textAllCaps="false"
            android:text="@string/copy_private_key"
            android:layout_margin="@dimen/dp_16"
            android:stateListAnimator="@null"/>

    </LinearLayout>
</layout>
