<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <com.lianer.core.custom.TitlebarView
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:centerTitle="@string/transfer"
            app:leftDrawble="@drawable/ic_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:src="@drawable/assets_get_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/transfer_success"
            android:textColor="@color/clr_111111"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="36dp"
            android:background="@drawable/gradient_oval_btn"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>

</layout>